--- a/index.html
+++ b/index.html
@@ -19,30 +19,125 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <p>&lt;!DOCTYPE html&gt;
+</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<pre><code>&lt;head&gt;
+    &lt;meta charset="utf-8" /&gt;
+    &lt;title&gt;智能合金APP介绍说明&lt;/title&gt;
+    &lt;link rel="stylesheet" href="css/weui.min.css"&gt;
+&lt;/head&gt;
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+&lt;body&gt;
+    &lt;h1 align="center"&gt;智能合金APP&lt;/h1&gt;
+    &lt;h1 align="center"&gt;Smart Lock APP&lt;/h1&gt;
+    &lt;div class="divs"&gt;
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+        &lt;h4 align="left"&gt;菜单栏功能介绍&lt;/h4&gt;
+        &lt;h4 align="left"&gt;Menu Bar Functions&lt;/h4&gt;
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+        &lt;h5&gt;1、添加蓝牙设备&lt;/h5&gt;
+        &lt;h5&gt;1、 Add Bluetooth Device&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在菜单中，点击添加蓝牙设备，则弹出蓝牙设备列表，选择则连接该蓝牙设备。&lt;/p&gt;
+                &lt;p&gt;In the menu, click Add a Bluetooth device, a pop-up list of Bluetooth devices, select the Bluetooth device is connected.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h5&gt;2、确认地理位置&lt;/h5&gt;
+        &lt;h5&gt;2、 Confirm location&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在菜单中，点击确认地理位置，则获取当前的地理位置信息，并保存作为锁的位置信息，用于自动开锁功能。&lt;/p&gt;
+                &lt;p&gt;In the menu, click OK location, obtain current location information and the location information is stored as a lock for the automatic lock function.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h5&gt;3、修改蓝牙PIN码&lt;/h5&gt;
+        &lt;h5&gt;3、 Modify Bluetooth PIN&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在菜单中，点击修改蓝牙PIn码，则跳转到设备信息界面，用于修改当前应用和锁蓝牙的PIN码信息。&lt;/p&gt;
+                &lt;p&gt;In the menu, click Edit Bluetooth PIn code, jump to the device information interface for modifying the current application and the Bluetooth PIN code lock information.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h5&gt;4、校准自动开锁&lt;/h5&gt;
+        &lt;h5&gt;4、Calibration automatically unlock&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在菜单中，点击校准自动开锁，则弹出提示框，提示用户移动到距离锁正前方1.5米的位置，按下确定按钮，并获取一分钟的蓝牙RSSI信号，用于自动开锁时，校准是否允许开锁。&lt;/p&gt;
+                &lt;p&gt;In the menu, click the calibration automatically lock, then a pop-up box that prompts the user to move from the front of the lock position 1.5 m, press the OK button, and get a minute of Bluetooth RSSI signal, for automatic unlocking, whether to
+                    allow calibration unlock.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h5&gt;5、恢复出厂设置&lt;/h5&gt;
+        &lt;h5&gt;5、reset&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在菜单中，点击恢复出厂设置，则弹出提示框，提示用户该怎样进行恢复出厂设置操作。&lt;/p&gt;
+                &lt;p&gt;In the menu, click restore factory settings, pop-up boxes, prompts the user how to perform a factory data reset.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h1&gt;&lt;/h1&gt;
+        &lt;h4 align="left"&gt;侧边栏功能介绍&lt;/h4&gt;
+        &lt;h4 align="left"&gt;Sidebar Features&lt;/h4&gt;
+        &lt;h5&gt;1、蓝牙开锁&lt;/h5&gt;
+        &lt;h5&gt;1、 Bluetooth unlock&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在侧边栏中，点击蓝牙开锁，则进入蓝牙开锁界面，可以进行蓝牙开锁操作，并显示锁的电量和开锁次数。&lt;/p&gt;
+                &lt;p&gt;In the sidebar, click Bluetooth unlock, then enter the unlock Bluetooth interface, Bluetooth unlock operation and displays the power lock and unlock times.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h5&gt;2、密码管理&lt;/h5&gt;
+        &lt;h5&gt;2、 Password Management&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在侧边栏中，点击密码管理，则进入密码管理界面，该界面显示锁中的所有的开门密码，可删除、编辑指定密码，也可以添加新的密码，最多添加两个密码。&lt;/p&gt;
+                &lt;p&gt;In the sidebar, click the password management, then enter the password management interface that displays all the lock open password, you can delete, edit specify a password, you can also add a new password, add up to two passwords.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h5&gt;3、指纹管理&lt;/h5&gt;
+        &lt;h5&gt;3、 Fingerprint Management&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在侧边栏中，点击指纹管理，则进入指纹管理界面，该界面显示锁中的所有的指纹信息，可删除、编辑指定指纹，也可以添加新的指纹，最多添加255个指纹。&lt;/p&gt;
+                &lt;p&gt;In the sidebar, click fingerprint management, then enter fingerprint management interface that displays all of the fingerprint lock information, delete, edit the assigned finger, you can also add a new fingerprint, add up to 255 fingerprints.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h5&gt;4、记录查询&lt;/h5&gt;
+        &lt;h5&gt;4、 Records check&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在侧边栏中，点击记录查询，则进入记录查询界面，该界面显示锁中的所有的开锁记录，可删除指定记录和按日期查询记录，记录按当前日期显示。&lt;/p&gt;
+                &lt;p&gt;In the sidebar, click on the records check, then enter the record query interface that displays all the lock unlock records, you can delete the specified records and query records by date, record date according to the current display.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h5&gt;5、基本设置&lt;/h5&gt;
+        &lt;h5&gt;5、 Basic settings&lt;/h5&gt;
+        &lt;div class="weui_cell"&gt;
+            &lt;div class="weui_cell_bd weui_cell_primary"&gt;
+                &lt;p&gt;在侧边栏中，点击基本设置，则进入基本设置界面，该界面显示锁中的本机名称、电量、外围设备信息，可选择是否开启自动开锁功能，可进行手势密码设置，可输入配对PIN码删除外围设备。&lt;/p&gt;
+                &lt;p&gt;In the sidebar, click General Settings, then enter the basic settings interface that displays the name of the native lock, power, peripheral device information, you can choose whether to open the automatic lock function, gesture password can be set,
+                    you can enter the pairing PIN code elimination peripherals.&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;h4 align="left"&gt;应用截图&lt;/h4&gt;
+        &lt;h4 align="left"&gt;Application screenshot&lt;/h4&gt;
+        &lt;div align="center"&gt;
+            &lt;img src="img/2.PNG" width="300px" height="500px" /&gt;
+            &lt;img src="img/3.PNG" width="300px" height="500px" /&gt;
+            &lt;img src="img/4.PNG" width="300px" height="500px" /&gt;
+            &lt;img src="img/5.PNG" width="300px" height="500px" /&gt;
+            &lt;img src="img/6.PNG" width="300px" height="500px" /&gt;
+            &lt;img src="img/7.PNG" width="300px" height="500px" /&gt;
+            &lt;img src="img/8.PNG" width="300px" height="500px" /&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+&lt;/body&gt;
+</code></pre>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/LsenAng/Staticpages">Staticpages</a> is maintained by <a href="https://github.com/LsenAng">LsenAng</a>.</span>
